# space-thing

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
src/: fs.rs  gfx.rs  main.rs
src/gfx/: buffer.rs  camera.rs  gui.rs  image.rs  math.rs  volume.rs  window.rs  world.rs
src/gfx/shaders/: shader.frag  shader.vert  stencil.comp
src/gfx/vulkan/: fence.rs
vulkan/: Cargo.toml
vulkan/src/: buffer.rs  command.rs  device.rs  image.rs  instance.rs  lib.rs  physical_device.rs  pipeline.rs  shader.rs  surface.rs  swapchain.rs  sync.rs
