[package]
name = "space-thing"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.29.0"
futures = { version = "0.3.1", features = ["thread-pool"] }
lazy_static = "1.4.0"
log = "0.4.8"
maplit = "1.0.2"
raw-window-handle = "0.3.3"
simplelog = "0.7.4"
winit = "0.19.5"

[build-dependencies]
shaderc = "0.6.1"
