[package]
name = "vulkan"
version = "0.1.0"
authors = ["IcyDefiance <icydefiance@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.29.0"
log = "0.4.8"
raw-window-handle = "0.3.3"
thread_local = "1.0.0"
typenum = "1.11.2"
vk-mem = "0.2.0"
